<resources>
    <string name="app_name">IMC App</string>
    <string name="male_text">Hombre</string>
    <string name="female_text">Mujer</string>
    <string name="height_text">Altura</string>
    <string name="weight_text">Peso</string>
    <string name="age_text">Edad</string>
    <string name="btn_imc">Calcular IMC</string>
    <string name="result_title">IMC</string>
    <string name="error">ERROR</string>
</resources>